<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_mazesolver</name>
  <version>0.0.1</version>
  <description>Uses the turtlebot to solve a maze using SLAM algorithms</description>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <depend>turtlesim</depend> 

</package>
